syntax = "proto3";
package api;

option go_package = "github.com/ava-labs/hypersdk/x/programs/cmd/simulator_api/api";

message CreateKeyRequest {
    string name = 1;
}

message CreateKeyResponse {
    string name = 1;
}

service Simulator {
    rpc CreateKey(CreateKeyRequest) returns (CreateKeyResponse);
}
